# Lowcost-ITW-curation

./: .gitignore  README.md  config.yaml  main.py  main_sections.py  metadata.csv  pyproject.toml  requirements.txt  test_text.py  transcript.csv
AudioAnalyzer/: NISQA.py
AudioAnalyzer/nisqa/: run_predict.py
AudioAnalyzer/nisqa/nisqa/: NISQA_model.py
Denoising/: deep_net.py  demucs.py
Metrics/: acoustic_parameters.py  audio_quality.py  composite_metric.py  hours_duration.py  speech_dif.py
QualityPrediction/: DNSMOS.py  NISQA.py  README.md
QualityPrediction/dnsmos/: dnsmos_local.py
QualityPrediction/nisqa/nisqa/: NISQA_model.py
QualityPredition/: DNSMOS.py  NISQA.py
QualityPredition/nisqa/nisqa/: NISQA_model.py
STT/: whisper.py  whisper_fast.py  whisper_groq.py
SpeakerDiarization/: speaker_verification.py
SpeakerFiltering/: osd.py
Tests/: AA_test.py  STT_test.py  VAD_test.py  expected_results.json  metrics.py
Utils/: convert_to_mp3.py  create_folder_estructure.py  create_folder_structure.py  metrics_durations.py  reset_conditions.py
VAD/: VAD.py  auxiliares.py  clasificador_wps.py
